--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag @article do %>
+<%= form_tag @article do |f| %>
   <label>Article title:</label><br>
   <%= text_field_tag :title %><br>
  
